rns-lang/tests/snapshots/lexer-strings-unterminated_string_after_escape.snap
---
source: jasm/tests/integration_test.rs
assertion_line: 80
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String ending with backslash\
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/strings/unterminated_string_after_escape.ja:2:1 ]
   │
 2 │ "String ending with backslash\
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
